--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
            
        
     <div id='links'>
-            <a class='link' href='https://t.me/seirawave' target='_blank'><img src="assets/blacks/tg.png" height="46">Бложик с частицей моей жизни</a>
+            <a class='link' href='https://t.me/seirawave' target='_blank'><img src="assets/blacks/tg.png" height="46">Бложик c уведами о стримах</a>
             <a class='link' href='https://twitter.com/seirawave' target='_blank'><img  src="assets/blacks/twitter.png" height="46">Всё подряд.</a>
-            <a class='link' href='https://instagram.com/seirawave' target='_blank'><img  src="assets/blacks/inst.png" height="46">Фоточки</a>
             </div>
 
             <div id='links'>
