--- a/dm/index.html
+++ b/dm/index.html
@@ -29,6 +29,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 
+        <script src="../assets/emerge.js"></script>
+    <script>
+        function discord() {
+          prompt("Дискорд всё ещё не даёт ссылку, поэтому копируй это в графу френдреквеста.", "seirawave");
+        }
+      </script>
+
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
@@ -44,7 +51,6 @@
     <div id='links'>
         <a class='link' href='https://t.me/okinotori' target='_blank'><img src="../assets/blacks/tg.png" height="46">Телеграмм</a>
         <a class='link' href='javascript:discord()' target='_blank'><img  src="../assets/blacks/ds.png" height="46">Дискорд</a>
-        <a class='link' href='https://vk.com/okinotoro'_blank'><img  src="../assets/blacks/vk.png" height="46">Вконтакте</a>
         </div>
 </div>     
 
