--- a/dm/index.html
+++ b/dm/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div id='links'>
-        <a class='link' href='https://t.me/okinotori' target='_blank'><img src="../assets/blacks/tg.png" height="46">Телеграмм</a>
+        <a class='link' href='https://t.me/seirawave' target='_blank'><img src="../assets/blacks/tg.png" height="46">Телеграмм</a>
         <a class='link' href='javascript:discord()' target='_blank'><img  src="../assets/blacks/ds.png" height="46">Дискорд</a>
         </div>
 </div>     
