--- a/dm/index.html
+++ b/dm/index.html
@@ -50,7 +50,7 @@
 
     <div id='links'>
         <a class='link' href='https://t.me/seirawave' target='_blank'><img src="../assets/blacks/tg.png" height="46">Телеграмм</a>
-        <a class='link' href='javascript:discord()' target='_blank'><img  src="../assets/blacks/ds.png" height="46">Дискорд</a>
+        <a class='link' href='javascript:discord()'<img  src="../assets/blacks/ds.png" height="46">Дискорд</a>
         </div>
 </div>     
 
