--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
        
     <div id='links'>
             <a class='link' href='https://t.me/seiratg' target='_blank'><img src="assets/blacks/tg.png" height="43">Блог</a>
+         <a class='link' href='https://twitch.tv/seirawave' target='_blank'><img src="assets/blacks/tg2.png" height="43">Стримы</a>
             <a class='link' href='https://music.yandex.ru/users/L1fab/playlists' target='_blank'><img src="assets/blacks/ym.png" height="43">Мои плейлисты</a>
                 <a class='link' href='https://www.tinkoff.ru/rm/nesmeyanov.aleksandr30/5SAgc59009' target='_blank'><img src="assets/blacks/tinkoff.png" height="43">Тинькофф</a>
             </div>
